<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/save_to_draft"
        android:enabled="true"
        android:icon="@drawable/ic_save"
        android:iconTint="@color/white"
        android:title="@string/save"

        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:iconTint="@color/white"
        android:title="@string/menu_home"

        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/draft"
        android:enabled="true"
        android:icon="@drawable/ic_draft"
        android:iconTint="@color/white"
        android:title="@string/menu_draft"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/clear_list"
        android:enabled="true"
        android:icon="@drawable/ic_cancel_all_black_24dp"
        android:iconTint="@color/white"
        android:title="@string/clear_list"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/add_order_list"
        android:enabled="true"
        android:icon="@drawable/ic_add"
        android:iconTint="@color/white"
        android:title="@string/add"
        android:visible="false"
        app:showAsAction="ifRoom" />




</menu>